# flux-jax

./: pyproject.toml
src/flux_jax/: common.py  embeddings.py  normalization.py
tests/: __init__.py  common.py  test_embeddings.py  test_normalization.py
