[project]
name = "flux-jax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.4.0",
    "diffusers>=0.30.1",
    "jax>=0.4.31",
    "flax>=0.9.0",
    "einx>=0.3.0",
    "ml-dtypes>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
